<resources>
    <string name="app_name">ALIJIWANI-Baseline - English</string>
    <string name="btnDownload">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="start_interview">START INTERVIEW</string>
    <string name="start_data_entry">START DATA ENTRY</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="region">REGION</string>
    <string name="district">DISTRICT</string>
    <string name="uc">UC</string>
    <string name="cityVillage">City / Village</string>
    <string name="btnSave">Save</string>
    <string name="btnEnd">Cancel</string>
    <string name="signin">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="country">Language (Click to change)</string>
    <string name="pakistan">Pakistan</string>
    <string name="tajikistan">Tajikistan</string>
    <string name="btnLogin">Login</string>
    <string name="btnDownloadData">Download Data</string>
    <string name="cs_MAexist">might be already exist</string>
    <string name="netwrok">Network connection not available!</string>
    <string name="invalidpass">Invalid Password</string>
    <string name="unameRequired">Username is required.</string>
    <string name="incorrcetPass">Incorrect Password</string>
    <string name="downData">Download Data</string>
    <string name="permission">Permissions Required</string>
    <string name="warning">Warning</string>
    <string name="newApp">New App downloaded!!</string>
    <string name="appVer">App New Version</string>
     <string name="downloaded">Downloaded</string>
    <string name="appDownload">appDownload</string>
    <string name="newVer">New Version</string>
    <string name="downloading">Downloading</string>
    <string name="available">Available</string>
    <string name="downError">Cant download.. Internet connectivity issue!</string>
    <string name="backBtn">Press Back again to Exit</string>
    <string name="noNetwork">No network connection available!</string>
    <string name="appAvailable">APP is available!</string>
    <string name="oldAppMsg">App Ver." + " is now available. Your are currently using older Ver."</string>
    <string name="installNewApp">Install new version to use this app</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="complete">complete</string>
    <string name="updatingError">Error in updating db!!</string>
    <string name="updateDbError1">"Sorry. You can't go further."</string>
    <string name="updateDbError2">"Please contact IT Team (Failed to update DB)"</string>
    <string name="bckBtn">You Cant go back</string>
    <string name="processing">Processing</string>
    <string name="confirmation">Confirmation!</string>
    <string name="cntBtn">Are you sure, you want to continue - interview</string>
    <string name="failedUpdateDb">SORRY! Failed to update DB</string>
    <string name="invalidDate">Invalid date!</string>
    <string name="ageCalc">"Both Month and Year don't be zero!!"</string>
    <string name="action_database">Database Manager</string>
    <string name="action_data_sync">Sync Data</string>
    <string name="istatus"> Result of Household Questionnaire interview </string>
    <string name="istatusi"> Discuss any result not completed with team leader </string>
    <string name="istatus01"> Completed </string>
    <string name="istatus02"> No household member at home or no competent respondent at home at time of visit </string>
    <string name="istatus03"> Entire household is absent for extended period </string>
    <string name="istatus04"> Refused </string>
    <string name="istatus05"> Dwelling vacant or address not a dwelling </string>
    <string name="istatus06"> Dwelling not found </string>
    <string name="istatus07"> No Child or adolescent 18 years or below present in the HH </string>
    <string name="istatus08"> No MWRA 18 or above of age live in this household ? </string>
    <string name="istatus96"> Other (Specify) </string>
    <string name="upd_db_form"> updateDB(Form):\t </string>
    <string name="upd_db_error"> Updating Database… ERROR! </string>
    <string name="db_excp_error"> Database Exception... ERROR! </string>
    <string name="upd_db"> Updating Database...\t </string>
    <string name="fail_db_upd"> Failed to Update Database! </string>
    <string name="backPress"> Back Press Not Allowed </string>
    <string name="invalid_response"> Invalid Response </string>
    <string name="agecal">ageCal:\t</string>
    <string name="network_conn_error"> Network connection not available ! </string>
    <string name="no_mother_selected_child_list"> No Mother has been selected. Please select a mother before opening Child List </string>
    <string name="sec_not_available_moment"> This section is not available at the moment. </string>
    <string name="no_mother_selected_preg_list"> No Mother has been selected. Please select a mother before opening Pregnancy List </string>
    <string name="onitemselected"> onItemSelected(Samples):\t </string>
    <string name="folder_not_created"> Folder Not Created </string>
    <string name="invalid_password"> Invalid Password </string>
    <string name="username_required"> Username is required. </string>
    <string name="incorrect_username_or_password">Incorrect Username or Password</string>
    <string name="open_hh_form"> Open Household Form </string>
    <string name="open_anhtro_form">Open Anthro Form</string>
    <string name="info_hh_form_not_exist">INFO: Household information does not exist.</string>
    <string name="hh_not_found">Household not Found</string>
    <string name="hh_exists_form"> JSONException(Form): \t </string>
    <string name="w202t2">Probe for the type of person seen and record all answers given.</string>
    <string name="woman_child_info_missing">Please fill woman and child sections before entering this information</string>
    <string name="child_info_missing">Please fill child sections before entering this information</string>
    <string name="options">Options</string>
    <string name="naForage10"> Not applicable for age less than 10 years </string>
    <string name="openForm"> Open Form to start interview </string>
    <string name="enterData"> Open to enter data from paper </string>
    <string name="notAvlDied"> Not Available/Died </string>
    <string name="consent"> CONSENT </string>
    <string name="consInst"> Instruction: Read full consent text to the respondent scroll down the text when needed </string>
    <string name="liststatusa"> Married </string>
    <string name="liststatusb"> Not Applicable </string>
    <string name="liststatusc"> Un-Married </string>
    <string name="liststatusd"> Mother </string>
    <string name="liststatuse"> Child </string>
    <string name="liststatusf"> Adol F </string>
    <string name="liststatusg"> Adol M </string>
    <string name="liststatush"> Widowed </string>
    <string name="liststatusi"> Divorced </string>
    <string name="liststatusj"> Separated </string>
    <string name="liststatusk"> Unknown </string>
    <string name="fm">FAMILY MEMBERS</string>
    <string name="fc">Family Complete</string>
    <string name="proceed">Proceed</string>
    <string name="cnt">Continue</string>
    <string name="search">Search</string>
    <string name="mScreen">MAIN SCREEN</string>
    <string name="dataSync">DATA SYNC</string>
    <string name="selectIndMother">Select Indexed Mother</string>
    <string name="hl3t1"> What is the relationship of  </string>
    <string name="hl3t2"> with the head of household </string>
    <string name="hl8_info"> Drop down list to be appear of Married Female </string>
    <string name="hl897_info"> IF Checked dropdown list will disappear </string>
    <string name="hl9_info"> Drop down list to be appear of Married Female </string>
    <string name="as1householdinformation_mainheading">AS1: Household Information: </string>
    <string name="as2householdroster_mainheading">AS2: Household Roster: </string>
    <string name="bs1basicinformation_mainheading">BS1: Basic Information: </string>
    <string name="bs2familyplanning_mainheading">BS2: Family Planning  : </string>
    <string name="bs3informationonsexualreproductivehealthandviolence_mainheading">BS3: Information on Sexual Reproductive Health and Violence: </string>
    <string name="bs4ainformationonnoncommunicablediseasesbreastcancer_mainheading">BS4A: Information on Non-Communicable Diseases (Breast Cancer): </string>
    <string name="bs4binformationonnoncommunicablediseasescervicalcancer_mainheading">BS4B: Information on Non-Communicable Diseases (Cervical Cancer): </string>
    <string name="bs5informationonmentalhealthandphysicalactivity_mainheading">BS5: Information on Mental Health and Physical Activity: </string>
    <string name="bs6informationontechnologyuse_mainheading">BS6: Information on Technology Use: </string>
    <string name="bs7engagementofadultadolescentfathers_mainheading">BS7: Engagement of Adult/Adolescent Fathers: </string>
    <string name="cs1demographicsandgeneralinformation_mainheading">CS1: Demographics and General Information: </string>
    <string name="cs2satisfactionwithecdservices_mainheading">CS2: Satisfaction with ECD Services: </string>
    <string name="bs6title">Information on Technology Use</string>
    <string name="bs6t">Instructions : Now I will ask you some questions about smartphone and its use.</string>
    <string name="bs6q1">Do you have access to a smart phone?</string>
    <string name="bs4bq2301">Yes, I have my own phone</string>
    <string name="bs4bq2302">Yes, but I use my family member\'s phone </string>
    <string name="bs4bq2303">No</string>
    <string name="bs6q1m">If option 2 , please mention which family member:</string>
    <string name="bs6q2">Do you have access to internet connectivity on smart phone?</string>
    <string name="bs4bq3101">Yes, most of the time</string>
    <string name="bs4bq3102">Yes, sometimes I have internet connectivity, but the connection is poor</string>
    <string name="bs4bq3103">No, I do not use internet on my phone</string>
    <string name="bs6q3">Do you have access to a basic feature phone?</string>
    <string name="bs4bq3501">Yes, I have my own phone-</string>
    <string name="bs4bq3502">Yes, but I use my family member\'s phone </string>
    <string name="bs4bq3503">No</string>
    <string name="bs6q3m">If option 2, please mention which family member:</string>
    <string name="ctitle1">Respondent for Module C Sections 1-5: One woman aged 15-49 years with at least one under-5 biological child, where both mother and child are present in the household at the time of the interview - selected using Kish grid at beginning of Module B.</string>
    <string name="cinstr">To be asked to mother or caregiver of children 0-59 months old</string>
    <string name="cs1">Section 1: General Information</string>
    <string name="ctitle2">Thanks so much for providing information about your self and your sexual reproductive health. Now we will move to your children and in this setion we will talk about your child\'s development and will ask some questions to you to assess the development of your youngest child. </string>
    <string name="cs1q0101">01- Respondent Name</string>
    <string name="cs1q0102">01- Line Number</string>
    <string name="cs1q02">02- How many children do you have between the ages of 0-5 years?</string>
</resources>