<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="form"
            type="edu.aku.hassannaqvi.alijiwanibaseline.models.Child" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_gray"
        android:orientation="vertical">

        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/CustomToolbarTheme"
            app:popupTheme="@style/CustomPopupTheme"
            app:subtitle="@string/cs1demographicsandgeneralinformation_mainheading"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:title="@string/cs1"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- ctitle1  Title   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVctitle1"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ctitle1" />

                        <TextView
                            style="@style/info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/cinstr" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- ctitle2  Title   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVctitle2"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/sub_labels"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ctitle2" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- cs1q0101  Input   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVcs1q0101"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:orientation="horizontal">

                     <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                         android:layout_weight="0.4">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/cs1q0102" />

                        </LinearLayout>

                        <EditText
                            android:id="@+id/cs1q0102"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="#"
                            android:inputType="number"
                            android:gravity="center"
                            android:enabled="false"
                            android:maxLength="3"
                            android:text="@={form.cs1q0102}"
                            app:maxValue="100"
                            app:minValue="0"
                            android:editable="false"
                            app:type="range" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.6">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/cs1q0101" />

                        </LinearLayout>

                        <EditText
                            android:id="@+id/cs1q0101"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                            android:hint="@string/cs1q0101"
                            android:enabled="false"
                            android:text="@={form.cs1q0101}" />
                    </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>



                <!-- cs1q02  Input   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVcs1q02"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_cs1q02" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/cs1q02" />

                        </LinearLayout>

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/cs1q02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                            android:hint="#"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="2"
                            android:enabled="false"
                            android:text="@={form.cs1q02}"
                            app:maxValue="100"
                            app:minValue="0"
                            app:type="range" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <!--EndButton LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:background="@color/red_overlay"
                        android:onClick="btnEnd"
                        android:text="Cancel"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:background="@color/green_overlay"
                        android:onClick="btnContinue"
                        android:text="Save"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</layout>